[update] コンテナを常に再起動するように変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services: # （１）
       - "8000:80"
     environment:
       - SAVE_PATH=/save/savedata.json
+    restart: always
     volumes:
       - type: bind
         source: "./save"
