--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services: # （１）
     build: .
     ports:
       - "8000:80"
+    env_file:
+      - .env
     environment:
       - SAVE_PATH=/save/savedata.json
     restart: always
